# rust_practice

./: Cargo.toml  ch 1 - 3: rust_basics.md  ch 10: generics.md  ch 11: tests.md  ch 12: IO.md  ch 13: functional features.md  ch 14: more cargo crates.md  ch 5: structs.md  ch 6: enums.md  ch 6: enums_and_matching.md  ch 7: packages_crates_modules.md  ch 8: collections.md  ch 9: error_handling.md  ch14: more cargo crates.md  ch_1-3_rust_basics.md  ch_10_generics_traits_lifetimes.md  ch_11_tests.md  ch_14_more cargo crates.md  ch_15_smart_pointers.md  ch_16_concurrency_and_parallelism.md  ch_17_object_oriented.md  ch_18_patterns_and_matching  ch_18_patterns_and_matching.md  ch_19_advanced_features.md  ch_20_web_server.md  ch_4_ownership_notes.md  ch_5_structs.md  ch_6_enums_and_matching.md  ch_7_packages_crates_modules.md  ch_8_collections.md  ownership_notes.md  rust_basics.md  rust_notes.md
adder/: Cargo.toml
advanced_functions_closures/: Cargo.toml
advanced_traits/: Cargo.toml
advanced_types/: Cargo.toml
art/: Cargo.toml
blog/: Cargo.toml
blog_alternative/: Cargo.toml
box_practice/: Cargo.toml
closures_2/: Cargo.toml
collections_exercises_1/: Cargo.toml
collections_exercises_2/: Cargo.toml
collections_exercises_3/: Cargo.toml
conditional_expressions/: Cargo.toml
control_flow/: Cargo.toml
deadlock/: Cargo.toml
drop_trait/: Cargo.toml
enums/: Cargo.toml
experiments/: Cargo.toml
functions/: Cargo.toml
generic_basics/: Cargo.toml
generics/: Cargo.toml
gg_2/: Cargo.toml
guessing_game/: Cargo.toml
gui/: Cargo.toml
hash_map/: Cargo.toml
hello_macro/: Cargo.toml
hello_macro_derive/: Cargo.toml
interior_mutability/: Cargo.toml
iterator_trait/: Cargo.toml
iterators/: Cargo.toml
just_practice/: Cargo.toml
lifetimes/: Cargo.toml
macros/: Cargo.toml
message_passing/: Cargo.toml
minigrep/: Cargo.toml
modules/: Cargo.toml
more_errors/: Cargo.toml  hellos.txt
multiple_mutex/: Cargo.toml
mutex/: Cargo.toml
my_crate/: Cargo.toml
(+110 files in other folders)
