[workspace]

members = [
  "experiments",
  "functions",
  "guessing_game",
  'gg_2',
  "variables",
  "control_flow",
  "temp_conv",
  "ownership",
  "ref_borrowing",
  "slice_type",
  "structs",
  "rectangle_function",
  "rectangle_methods",
  "enums",
  "pattern_matching",
  "packages_crates",
  "modules",
  "restaurant",
  "vectors",
  "strings",
  "hash_map",
  "collections_exercises_1",
  "collections_exercises_2",
  "collections_exercises_3",
  "panic_result",
  "propagating_errors",
  "more_errors",
  "generic_basics",
  "generics",
  "traits"
]