[workspace]

members = [
  "experiments",
  "functions",
  "guessing_game",
  'gg_2',
  "variables",
  "control_flow",
  "temp_conv",
  "ownership",
  "ref_borrowing",
  "slice_type",
  "structs",
  "rectangle_function",
  "rectangle_methods",
  "enums",
  "pattern_matching",
  "packages_crates",
  "modules",
  "restaurant",
  "vectors",
  "strings",
  "hash_map",
  "collections_exercises_1",
  "collections_exercises_2",
  "collections_exercises_3",
  "panic_result",
  "propagating_errors",
  "more_errors",
  "generic_basics",
  "generics",
  "traits",
  "lifetimes",
  "adder",
  "minigrep",
  "workout_app",
  "closures_2",
  "iterators",
  "shoe_size",
  "iterator_trait",
  "my_crate",
  "art",
  "just_practice",
  "box_practice",
  "drop_trait",
  "reference_counting",
  "interior_mutability",
  "rc_and_refcell",
  "reference_cycles",
  "tree_data",
  "spawn",
  "spawn_values",
  "message_passing",
  "mutex",
  "multiple_mutex",
  "deadlock",
  "gui",
  "blog",
  "blog_alternative",
  "conditional_expressions",
  "pattern_syntax",
  "unsafe_rust",
  "advanced_traits",
  "advanced_types",
  "advanced_functions_closures",
  "macros",
  "hello_macro",
  "hello_macro_derive",
  "web_server",
  "pointers_practice"
]

# default settings for optimization levels
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3